# xscanner

./: .gitignore  CMakeLists.txt  Img.qrc  annotationellipseitem.cpp  annotationellipseitem.h  annotationlineitem.cpp  annotationpointitem.cpp  annotationpointitem.h  annotationrectitem.cpp  annotationrectitem.h  mainwindow.cpp  mainwindow.h  xcom_api.cpp  xcom_api.h  xscanner.pro
app/: CMakeLists.txt  README.md  main.cpp
config/: README.md  log4qt.properties
device/: README.md  detectorcommand.cpp  detectorcommand.h  detectorcontroller.cpp  detectorcontroller.h  detectormanager.cpp  detectormanager.h  drivercontroller.cpp  drivercontroller.h  gongy.cpp  gongy.h  gongyu.cpp  gongyu.h  gycustomcontrol.cpp  gycustomcontrol.h  ieventreceiver.h  imagegraphicsview.cpp  imagegraphicsview.h  irayfpdadapter.cpp  irayfpdadapter.h  motioncommand.cpp  motioncommand.h  motionconfig.cpp  motionconfig.h  motioncontroller.cpp  motioncontroller.h  motiondef.h  motionhelper.cpp  motionhelper.h  motionmanager.cpp  motionmanager.h  motionwidget.cpp  motionwidget.h  paramsetwidget.cpp  paramsetwidget.h  serialcomunicator.cpp  serialcomunicator.h  xraysource.cpp  xraysource.h
device_3100A/: AxisPosconfig.ini  C3100AAxisDef.h  C3100AControls.h  CMakeLists.txt  IMotionController.h  IXrayController.h  adaptor.ini  appconfig.h  axisformula.cpp  axisformula.ui  c3100amotionwidget.cpp  c3100amotionwidget.h  c3100axraycontroller.cpp  c3100axraycontroller.h  motionctrlcommand.cpp  motionctrlviewmodel.cpp  motionctrlviewmodel.h  motionctrlwidget.cpp  motionctrlwidget.h  motionctrlwidget.ui  motiondef.h  othercontrolsdialog.cpp  othercontrolsdialog.h  othercontrolsdialog.ui  parasettingsdialog.cpp  parasettingsdialog.h  parasettingsdialog.ui
device_3100A/motion/: C3100AControls.h  MotionCtrlConfig.ini  appconfig.cpp  apphelper.cpp  apphelper.h  axisformula.h  axisparametersdialog.cpp  axisparametersdialog.h  c3100amotionwidget.cpp  c3100amotionwidget.h  cardio.cpp  cardio.h  cardio.ui  motionctrlcommand.cpp  motionctrlcommand.h  motionctrlmanager.cpp  motionctrlmanager.h  motionctrlviewmodel.cpp  motionctrlviewmodel.h
device_3100A/xray/: xraycontroller.cpp  xraycontroller.h
docs/: 交互式图形项（ROI）设计文档.docx
gui/: CMakeLists.txt  Img.qrc  README.md  annotationellipseitem.cpp  annotationhorizontallineitem.cpp  annotationhorizontallineitem.h  annotationlineitem.cpp  annotationlineitem.h  annotationpointitem.cpp  annotationpointitem.h  annotationrectitem.cpp  imageviewer.cpp  imageviewer.h  mainwindow.cpp  mainwindow.h  toprightinfowidget.cpp  toprightinfowidget.h
gui/Resources/qss/: stylesheet.qss
gui/items/: ROI.cpp  ROI.h  angledlineroi.cpp  angledlineroi.h  angleroi.cpp  angleroi.h  annotationellipseitem.cpp  annotationellipseitem.h  annotationpointitem.h  annotationrectitem.cpp  annotationrectitem.h  annotationtextitem.cpp  annotationtextitem.h  annotationverticallineitem.cpp  annotationverticallineitem.h  ellipseroi.cpp  ellipseroi.h  freehandroi.cpp  freehandroi.h  handle.cpp  handle.h  infinitelineitem.cpp  infinitelineitem.h  infinitelinelabel.cpp  infinitelinelabel.h  linesegmentroi.cpp  linesegmentroi.h  pointmeasureitem.cpp  pointmeasureitem.h  polylineroi.cpp  polylineroi.h  rectroi.cpp  rectroi.h
gui/states/: angledrawingstate.cpp  angledrawingstate.h  dragginghandlestate.cpp  dragginghandlestate.h  drawingrectstate.cpp  drawingrectstate.h  drawingstate.cpp  drawingstate.h  drawingstatemachine.cpp  drawingstatemachine.h  freehanddrawingstate.cpp  freehanddrawingstate.h  genericdrawingstate.h  idlestate.cpp  idlestate.h  panningstate.cpp  panningstate.h  polylinedrawingstate.cpp  polylinedrawingstate.h  rectdrawingstate.cpp  rectdrawingstate.h
gui/viewmodels/: imageviewmodel.cpp  imageviewmodel.h
gui/views/: imageviewer.cpp  imageviewer.h  mainwindow.cpp  mainwindow.h
gui/widgets/: curveswidget.cpp  curveswidget.h  extractedimageviewer.cpp  extractedimageviewer.h  histogramwidget.cpp  histogramwidget.h  logwidget.cpp  logwidget.h  toprightinfowidget.cpp  toprightinfowidget.h
service/: CMakeLists.txt  README.md  imageprocessor.cpp  imageprocessor.h
test/: CMakeLists.txt  README.md
test/demo_gui/: CMakeLists.txt  demo_main.cpp
util/: README.md
util/logger/: CMakeLists.txt  logger.cpp  logger.h  qtwidgetappender.cpp  qtwidgetappender.h
