cmake_minimum_required(VERSION 3.16)
project(xscanner)
find_package(Qt6 REQUIRED COMPONENTS Core Gui Widgets SerialPort PrintSupport Core5Compat Concurrent AxContainer)
qt_standard_project_setup()
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)

add_subdirectory(third_party)
add_subdirectory(util/logger)
add_subdirectory(device_3100A)
add_subdirectory(service)
add_subdirectory(gui)
add_subdirectory(app)
add_subdirectory(test)
add_compile_options(/utf-8)
install(TARGETS ${PROJECT_NAME} DESTINATION bin)
